--- a/style.css
+++ b/style.css
@@ -1,28 +1,7 @@
-h1, h2 {
-  color: green; /* changed from purple */
-}
-
-p {
-  color: gray;
-}
-
-ul {
-  border: 3px solid orange;
-}
-
-ol {
-  border: 3px solid purple;
-}
-
-ol, ul {
-  padding: 10px 20px;
-  border-radius: 10px;
-}
-
-strong {
-  color: purple;
-}
-
-em {
-  color: darkslategray;
-}
+h1, h2 { color: green; }
+p { color: gray; }
+ul { border: 3px solid orange; }
+ol { border: 3px solid purple; }
+ol, ul { padding: 10px 20px; border-radius: 10px; }
+strong { color: purple; }
+em { color: darkslategray; }
